frontend/tests/cases/positive/interfaces/instances/instanceCoeffectPlus.gr
interface Plus a (c : Nat) where
  sum : a [c] -> a

data A = B

instance Plus A (m+n) where
  sum [B] = B
