frontend/tests/cases/negative/badKindInInstanceConstraint.gr
data A = A

data B = B

interface Simple a where
  simple : a -> a

-- 'B' is not a valid constraint
instance {B} => Simple A where
  simple x = x
